test/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartcaptar-front-service
spec:
  selector:
    app: smartcaptar-front
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
