test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartcaptar-front
  labels:
    app: smartcaptar-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartcaptar-front
  template:
    metadata:
      labels:
        app: smartcaptar-front
    spec:
      containers:
      - name: smartcaptar-front
        imagePullPolicy: Always
        image: ghcr.io/eed-web-application/smartcaptar-front:sha-7ac3297
        envFrom:
        - configMapRef:
            name: env-config-map
        resources:
          limits:
            memory: 512Mi
            cpu: "250m"
        env:
        - name: public_url
          value: "/smartcaptar/"        
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: github-secret
