test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartcaptar-front-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    name: smartcaptar-front-ingress
spec:
  rules:
  - host: "accel-webapp-dev.slac.stanford.edu"
    http:
      paths:
      - pathType: Prefix
        path: /smartcaptar(/|$)(.*)
        backend:
          service:
            name: smartcaptar-front-service
            port: 
              number: 80
